// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviewList renders well with out store 1`] = `
<div>
  <Connect(MovieListHeader) />
  <div
    className="moviewList__container"
  />
</div>
`;

exports[`MoviewList renders well with store 1`] = `
<div>
  <Connect(MovieListHeader) />
  <div
    className="moviewList__container"
  >
    <Connect(MovieListItem)
      mark={NaN}
    />
    <Connect(MovieListItem)
      mark={NaN}
    />
    <Connect(MovieListItem)
      mark={NaN}
    />
  </div>
</div>
`;
